Fixed grey background and blue button on firefox and safari

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: rgb(254, 254, 254);
+}
+
+button {
+  color: black;
+}
+
 img {
   display: block;
 }
